<resources>
    <string name="app_name" translatable="false">Geostat</string>

    <string name="main_activity_description">Marquez votre présence</string>

    <string name="login">Connexion</string>
    <string name="mark_presence">Marquer sa présence</string>

    <!-- NOTIFICATION SERVICE -->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="notification_title">"Vous avez reçu une notification"</string>

    <!-- MAIN ACTIVITY -->
    <string name="error_not_connected">Vous devez vous connecter !</string>
    <string name="error_authentication_canceled">Authentification annulée&#8230;</string>
    <string name="error_no_internet">Aucune connexion internet !</string>
    <string name="error_unknown_error">Une erreur inconnue s\'est produite&#8230;</string>
    <string name="connection_succeed">Authentification réussie !</string>
    <string name="button_login_text_logged">Afficher le profil</string>
    <string name="button_login_text_not_logged">Connexion</string>
    <string name="button_statistics">Mes stats de presences</string>
    <string name="readme">A LIRE !!!</string>

    <!-- PROFILE ACTIVITY -->
    <string name="toolbar_title_login_activity">Votre Profil</string>
    <string name="text_input_username">Nom d\'utilisateur</string>
    <string name="text_view_email">Adresse email :</string>
    <string name="button_update_account">Mettre à jour le nom d\'utilisateur</string>
    <string name="button_delete_account">Supprimer mon compte</string>
    <string name="button_sign_out_account">Déconnexion</string>
    <string name="info_no_email_found">Auncune adresse email</string>
    <string name="info_no_username_found">Aucun nom d\'utilisateur</string>
    <string name="popup_message_confirmation_delete_account">Etes-vous sûr(e) de vouloir supprimer votre compte ?</string>
    <string name="popup_message_choice_yes">Oui</string>
    <string name="popup_message_choice_no">Non</string>
    <string name="successfully_log_out">Déconnexion réussie</string>
    <!-- LOCATION ACTIVITY -->
    <string name="toolbar_title_location_activity">Votre position</string>
    <string name="positive_location">Félicitations vous vous trouvez dans l\'enceinte du campus .</string>
    <string name="negative_location">Dommage vous ne vous trouvez pas dans l\'enceinte du campus .</string>
    <string name="neutral_position">Rentrez en arrière puis revenez pour mettre à jour votre actuelle localisation .</string>
    <string name="presence_marker_text">Je suis présent !\n</string>
    <string name="presence_marker_toast_text">Marquage impossible . Veuillez vous référer au guide pour les horaires valides .</string>
    <string name="send_absence_form">Envoyer un formulaire d\'absence</string>
    <string name="absence_form_notice">Veuillez s\'il vous plaît remplir ce formulaire pour signaler votre absence .</string>
    <string name="absence_form_username_field">Nom d\'utilisateur :</string>
    <string name="absence_form_date_field">Date de l\'absence :</string>
    <string name="absence_form_field_reason">Motif de l\'absence :</string>
    <string name="absence_form_button_send_text">Envoyer</string>
    <string name="presence_noticed">Votre présence a été signalée pour ce matin , venez la confirmer plus tard .</string>
    <string name="presence_noticed_error">Erreur lors du signalement de votre présence.</string>
    <string name="presence_already_noticed">Votre présence a déjà été signalée ce matin !</string>
    <string name="no_presence_noticed_morning">Aucune présence signalée pour ce matin , vous êtes absent ! Un formulaire d\'absence a été envoyé .</string>

    <string name="presence_confirmed">Présence confirmée .</string>
    <string name="presence_already_confirmed">Votre présence a déjà été confirmée.</string>
    <!-- ABSENCE ACTIVITY -->
    <string name="toolbar_title_absence_activity">Formulaire d\'absence</string>
    <string-array name="motifs_absence">
        <item>Maladie</item>
        <item>Maternité</item>
        <item>Formation</item>
        <item>Autre</item>
    </string-array>
    <string name="form_sent_successfully">Formulaire d\'absences envoyé avec succès .</string>
    <string name="form_sent_error">Erreur lors de l\'envoi du formulaire d\'absence .</string>
    <string name="already_sent_absence_form">Vous avez déjà envoyé un formulaire d\'absence aujourd\'hui.</string>
    <string name="date_format">%d/%d/%d</string>

    <!-- STATISTICS ACTIVITY -->
    <string name="toolbar_title_statistics_activity">Mes stats</string>
    <string name="reason_maternity">Maternité</string>
    <string name="reason_course">Formation</string>
    <string name="reason_sickness">Maladie</string>
    <string name="reason_other">Autre</string>
    <string name="reason_presence">Présence</string>
    <string name="details">Détails</string>


    <!-- FACEBOOK LOGIN -->
    <string name="facebook_application_id">1488817101526462</string>
    <string name="fb_login_protocol_scheme">fb1488817101526462</string>
    <string name="facebook_client_token">8a303d2dc2c3facb372bde0f9577e3c9</string>

    <!-- ABOUT ACTIVITY -->
    <string name="important_information">Informations importantes</string>
    <string name="about_text">Welcome to Geostat! This application was created to help you report your presence or absence within your organization.\n\n

Instructions:\n

Please sign in or register with Google or Facebook.\n\n

Press the \"mark my presence"\ button.\n\n

A new screen will appear. It allows you to determine your location in relation to your organization\'s premises:\n\n

*If you are outside the perimeter of your structure , you will be redirected to a page to send an absence form.\n\n

*If you are inside the perimeter of your structure, you will click on the \"I am present"\ button.\n\n


Note: Reporting of presence can only be done from 10:00 a.m. to 10:59 a.m. and from 3:00 p.m. to 3:59 p.m.\n\n


*If no presence or absence report is made during the day, then starting from 8:00 p.m., the application will attempt to send an absence form to the database.\n\n

Furthermore, you have the option to click on the \"My presence statistics"\ button to view your absence proportions and their reasons, as well as your presence.\n\n

Press the \"DETAILS"\ button and you can view the exact days of presence and absence.\n\n

Supervisor : Dr Macka Macka Ebenezer\n\n

Developers : Piz , Einstein , Diva .\n\n

  </string>



</resources>